<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE project>
<project xmlns="https://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.app</groupId>
    <artifactId>StartActivities</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>StartActivities</name>

    <properties>
      <configuration-debug>true</configuration-debug>
		<openjfx-releases>openjfx-releases</openjfx-releases>
        <javafx.version>21.0.4</javafx.version>
        <testfx.version>4.0.18</testfx.version>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
    </properties>

    <dependencies>
    
    	<!--OPENJFX Dependencies-->
    	<dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    	<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-swing</artifactId>
		    <version>${javafx.version}</version>
		</dependency>
    
    	<!--TestFX Dependencies-->
	    <dependency>
		    <groupId>org.testfx</groupId>
		    <artifactId>testfx-core</artifactId>
		    <version>${testfx.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.testfx</groupId>
		    <artifactId>testfx-junit5</artifactId>
		    <version>${testfx.version}</version>
		    <scope>test</scope>
		</dependency>
		
		<!--Junit Dependencies-->
	    <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
	    <dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.2</version>
		    <scope>test</scope>
		</dependency>
		
        <!-- Mockito -->
	    <dependency>
	        <groupId>org.mockito</groupId>
	        <artifactId>mockito-core</artifactId>
	        <version>3.3.3</version>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <version>5.12.0</version>
		    <scope>test</scope>
		</dependency>
    
    	<!--Powermock Reflect Dependency-->
    	<dependency>
		    <groupId>org.powermock</groupId>
		    <artifactId>powermock-reflect</artifactId>
		    <version>1.6.1</version>
		    <scope>test</scope>
		</dependency>

		
        
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>
    
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.1.0-alpha1</version>
        </dependency>
        
        <!--Logback Dependencies-->
		<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
		    <version>1.5.6</version>
	    </dependency>
	    <dependency>
    		<groupId>ch.qos.logback</groupId>
    		<artifactId>logback-core</artifactId>
    		<version>1.5.6</version>
		</dependency>

		<dependency>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-surefire-plugin</artifactId>
		  <version>3.3.1</version>
 		  <type>maven-plugin</type>
		</dependency>
		
    </dependencies>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>openjfx-releases</id>
            <url>https://openjfx.io/</url>
        </repository>
	    <repository>
	        <id>maven-central-repo</id>
	        <url>http://repo1.maven.org/maven2</url>
	        <snapshots>
	            <enabled>false</enabled>
	        </snapshots>
	    </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
  		 	<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                	<forkCount>1</forkCount>
                	<reuseForks>true</reuseForks>
        	        <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
            	</configuration>
            </plugin>	
        	<plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version> <!-- Atualize a versão para uma mais recente -->
                <configuration>
                    <mainClass>com.app.startactivities.MainApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
